@@ -233,7 +233,6 @@ class PluginList
 	//{{{ addPlugin() method
 	void addPlugin(Plugin plugin)
 	{
-		plugin.checkIfInstalled();
 		plugins.add(plugin);
 		pluginHash.put(plugin.name,plugin);
 	} //}}}
@@ -305,66 +304,53 @@ class PluginList
 		String description;
 		String author;
 		final List<Branch> branches = new ArrayList<>();
-		//String installed;
-		//String installedVersion;
+		String installedVersion = null;
+		String installedPath = null;
+		boolean loaded = false;
 
-		void checkIfInstalled()
+		String getInstalledVersion()
 		{
-			/* // check if the plugin is already installed.
-			// this is a bit of hack
+			this.loaded = false;
 			PluginJAR[] jars = jEdit.getPluginJARs();
 			for(int i = 0; i < jars.length; i++)
 			{
 				String path = jars[i].getPath();
-				if(!new File(path).exists())
-					continue;
 
 				if(MiscUtilities.getFileName(path).equals(jar))
 				{
-					installed = path;
-
 					EditPlugin plugin = jars[i].getPlugin();
 					if(plugin != null)
 					{
 						installedVersion = jEdit.getProperty(
 							"plugin." + plugin.getClassName()
 							+ ".version");
-					}
-					break;
-				}
-			}
-
-			String[] notLoaded = jEdit.getNotLoadedPluginJARs();
-			for(int i = 0; i < notLoaded.length; i++)
-			{
-				String path = notLoaded[i];
-
-				if(MiscUtilities.getFileName(path).equals(jar))
-				{
-					installed = path;
-					break;
-				}
-			} */
-		}
-
-		String getInstalledVersion()
-		{
-			PluginJAR[] jars = jEdit.getPluginJARs();
-			for(int i = 0; i < jars.length; i++)
-			{
-				String path = jars[i].getPath();
-
-				if(MiscUtilities.getFileName(path).equals(jar))
-				{
-					EditPlugin plugin = jars[i].getPlugin();
-					if(plugin != null)
-					{
-						return jEdit.getProperty(
-							"plugin." + plugin.getClassName()
-							+ ".version");
+						this.loaded = true;
+						return installedVersion;
 					}
 					else
 						return null;
+				}
+			}
+			String[] notLoadedJars = jEdit.getNotLoadedPluginJARs();
+			for(String path: notLoadedJars){
+				if(MiscUtilities.getFileName(path).equals(jar))
+				{
+					try
+					{
+						PluginJAR.PluginCacheEntry cacheEntry = PluginJAR.getPluginCacheEntry(path);
+						if(cacheEntry != null)
+						{
+							String versionKey = "plugin." + cacheEntry.pluginClass + ".version";
+							installedVersion = cacheEntry.cachedProperties.getProperty(versionKey);
+							Log.log(Log.DEBUG, PluginList.class, "found installed but not loaded "+ jar + " version=" + installedVersion);
+							installedPath = path; 
+							return installedVersion;
+						}
+					}
+					catch (IOException e)
+					{
+						Log.log(Log.WARNING, "Unable to access cache for "+jar, e);
+					}
 				}
 			}
 
@@ -373,6 +359,14 @@ class PluginList
 
 		String getInstalledPath()
 		{
+			if(installedPath != null){
+				if(new File(installedPath).exists()){
+					return installedPath;
+				}else{
+					installedPath = null;
+				}
+			}
+
 			PluginJAR[] jars = jEdit.getPluginJARs();
 			for(int i = 0; i < jars.length; i++)
 			{
@@ -420,6 +414,12 @@ class PluginList
 
 			//branch.satisfyDependencies(roster,installDirectory,
 			//	downloadSource);
+
+			if(installedVersion != null && installedPath!= null && !loaded)
+			{
+				roster.addLoad(installedPath);
+				return;
+			}
 
 			if(installed != null)
 			{
